--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,7 @@
+body{
+    background-color: #f9f9f9;
+}
+
 .header nav :hover{
     color: #ad53a6;
 }
@@ -105,7 +109,6 @@ ul li {
 }
 
 .technical {
-    background-color: #f9f9f9; /* Light gray background */
     padding: 3rem 1rem; /* Spacing around the section */
 }
 
@@ -158,4 +161,20 @@ ul li {
     .grid {
         grid-template-columns: repeat(6, 1fr); /* Six columns for larger screens */
     }
+}
+
+.projects h1{
+    color: #502779;
+}
+
+.projects button{
+    background-color: #502779;
+}
+
+.projects button:hover{
+    background-color: #ad53a6;
+}
+
+#proj{
+    background-color: #502779;
 }
