--- a/css/index.css
+++ b/css/index.css
@@ -178,3 +178,11 @@ ul li {
 #proj{
     background-color: #502779;
 }
+
+footer {
+    background-color: #502779;
+}
+
+.copyright{
+    background-color: #48236C;
+}
